# SAP-Datasphere-API

./: .gitignore  .release-please-config.json  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/datasphere_api/: __init__.py  auth.py  client.py  config.py  exceptions.py  models.py
src/datasphere_api/models/: __init__.py  analytical_models.py  remote_tables.py  views.py
src/datasphere_api/resources/: analytical_models.py  base.py  remote_tables.py  task_chains.py  views.py
tests/: conftest.py  test_analytical_models.py  test_auth.py  test_client.py  test_config.py  test_remote_tables.py  test_task_chains.py  test_views.py
