[project]
name = "Datasphere-API"
version = "0.1.1"
description = "Unofficial async Python client for the SAP Datasphere automation APIs."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Peter Schwips" }]
keywords = ["SAP", "Datasphere", "API", "Client", "Automation", "Async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.4.0",
    "playwright>=1.54.0",
]

[project.urls]
Homepage = "https://github.com/peterschwps/SAP-Datasphere-API"
Repository = "https://github.com/peterschwps/SAP-Datasphere-API"
Issues = "https://github.com/peterschwps/SAP-Datasphere-API/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "G",    # flake8-logging-format
    "I",    # isort
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/datasphere_api"]

[tool.pyright]
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyright>=1.1.405",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.13.0",
]
